@@ -68,8 +68,10 @@ class Event < ActiveRecord::Base
       true
     elsif issue? || issue_note?
       Ability.allowed?(user, :read_issue, note? ? note_target : target)
+    elsif merge_request? || merge_request_note?
+      Ability.allowed?(user, :read_merge_request, note? ? note_target : target)
     else
-      ((merge_request? || note?) && target.present?) || milestone?
+      milestone?
     end
   end
 
@@ -278,6 +280,10 @@ class Event < ActiveRecord::Base
 
   def issue_note?
     note? && target && target.for_issue?
+  end
+
+  def merge_request_note?
+    note? && target && target.for_merge_request?
   end
 
   def project_snippet_note?
