@@ -93,6 +93,7 @@ v 8.13.0 (unreleased)
   - Cleanup Ci::ApplicationController. !6757 (Takuya Noguchi)
   - Fix a typo in doc/api/labels.md
   - API: all unknown routing will be handled with 404 Not Found
+  - Make guests unable to view MRs on private projects
 
 v 8.12.5 (unreleased)
   - Update the mail_room gem to 0.8.1 to fix a race condition with the mailbox watching thread
